--- a/app/views/layouts/partials/_cart_item.html.erb
+++ b/app/views/layouts/partials/_cart_item.html.erb
@@ -2,7 +2,7 @@
     <div id="cart-item-<%= item.inventory_id %>" class="row px-3">
         <a class="col-md-11 row text-decoration-none" href="/products/<%= item.inventory.product.meta_title %>">
             <div class="col-md-4">
-                <img class="item-cart-img mb-2" src="<%= item.inventory.color_url %>" alt="<%= item.inventory.product.product_name %>" />
+                <img class="item-cart-img mb-2 border-img" src="<%= item.inventory.color_url %>" alt="<%= item.inventory.product.product_name %>" />
             </div>
             <div class="col-md-8 my-auto">
                 <span class="text-dark d-block font-size-1-1-rem"><%= item.inventory.product.product_name %> size <%= item.inventory.size %></span>
