--- a/app/views/checkout/result.html.erb
+++ b/app/views/checkout/result.html.erb
@@ -10,7 +10,7 @@
             <section class="py-5">
                 <div class="container">
                     <div class="row text-left p-2 pb-3">
-                        <h4>Related Products</h4>
+                        <h4>Recommend Products</h4>
                     </div>
 
                     <!--Start Carousel Wrapper-->
