--- a/app/views/layouts/partials/_categories.html.erb
+++ b/app/views/layouts/partials/_categories.html.erb
@@ -10,16 +10,16 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('men-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
+            <%= link_to image_tag('men-sport.jpg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h5 class="text-center mt-3 mb-3">Men</h5>
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('women-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
+            <%= link_to image_tag('women-sport.jpg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h2 class="h5 text-center mt-3 mb-3">Women</h2>
 
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('kid-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
+            <%= link_to image_tag('kid-sport.jpg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h2 class="h5 text-center mt-3 mb-3">Kid</h2>
         </div>
         <div class="col-12 col-md-12 text-center">
