--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,28 +55,35 @@
           });
       </script>
     <% end %>
-    <!-- Messenger Chat Plugin Code --> 
-    <div id="fb-root">
-    </div>
+<!-- Messenger Plugin chat Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Plugin chat code -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
-    <script> 
+
+    <script>
       var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "PAGE-ID");
+      chatbox.setAttribute("page_id", "101042465993632");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
+
+    <!-- Your SDK code -->
     <script>
       window.fbAsyncInit = function() {
-        FB.init({ xfbml : true, version : 'API-VERSION' });
+        FB.init({
+          xfbml            : true,
+          version          : 'v15.0'
+        });
       };
+
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id))
-        return; js = d.createElement(s);
-        js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
-    </script> 
+    </script>
   </body>
 </html>
