--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -105,4 +105,35 @@
             <input class="w-100" id="autoComplete" type="search" dir="ltr" spellcheck=false autocorrect="off" autocomplete="off" autocapitalize="off">
         </form>
     </div>
+        <a onclick="open_speech_recognition()" id="btnTalk" class="btn btn-success">Voice</a>
 </div>
+
+<script>
+
+var message = document.getElementById('autoComplete');
+// new speech recognition object
+var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
+var recognition = new SpeechRecognition();
+            
+// This runs when the speech recognition service starts
+recognition.onstart = function() {
+    console.log("We are listening. Try speaking into the microphone.");
+};
+
+recognition.onspeechend = function() {
+    // when user is done speaking
+    recognition.stop();
+}
+              
+// This runs when the speech recognition service returns result
+recognition.onresult = function(event) {
+    var transcript = event.results[0][0].transcript;
+    var confidence = event.results[0][0].confidence;
+    message.value = transcript;
+};
+              
+// start recognition
+function open_speech_recognition() {
+    recognition.start(); 
+}
+</script>
