--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -21,7 +21,7 @@
                         <%= link_to 'Shop', shop_index_path, class: 'nav-link' %>
                     </li>
                     <li class="nav-item">
-                        <%= link_to 'Coupons', coupons_path, class: 'nav-link' %>
+                        <%= link_to 'Coupons', coupons_path, class: 'nav-link', target: '_blank' %>
                     </li>
                     <li class="nav-item">   
                         <%= link_to 'Contact', contact_index_path, class: 'nav-link' %>
