--- a/app/views/layouts/partials/_advertising_product.html.erb
+++ b/app/views/layouts/partials/_advertising_product.html.erb
@@ -26,7 +26,7 @@
                 </li>
             </ul>
             <%= link_to product.product_name, home_index_path, class: 'h2 text-decoration-none text-dark' %>
-            <p class="card-text">
+            <p class="card-text layout-description">
                 <%= product.description %>
             </p>
             <p class="text-muted">Comments (<%= product.comments.count %>)</p>
