--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -192,16 +192,16 @@
                                         <li class="list-inline-item">Color:
                                             <input type="hidden" name="color" id="color" value="">
                                         </li>
-                                        <% @product.inventories.where('quantity_of_inventory > 0').each do |item| %>
-                                            <li class="list-inline-item"><a name="color-image-item" class="cursor-pointer d-block" onclick="active_color_image_item(this, '<%= @product.id %>')"><%= image_tag item.color_url, class: 'item-img img-fluid border-img-color', alt: @product.product_name %></a></li>
+                                        <% @product.inventories.where('quantity_of_inventory > 0').distinct.pluck(:color_url).each do |item| %>
+                                            <li class="list-inline-item"><a name="color-image-item" class="cursor-pointer d-block" onclick="active_color_image_item(this, '<%= @product.id %>')"><%= image_tag item, class: 'item-img img-fluid border-img-color', alt: @product.product_name %></a></li>
                                         <% end %>                                      
                                     </ul>
                                     <ul class="list-inline pb-3">
                                         <li class="list-inline-item">Size:&nbsp;&nbsp;
                                             <input type="hidden" name="size" id="size" value="">
                                         </li>
-                                        <% @product.inventories.where('quantity_of_inventory > 0').order(size: :ASC).each do |item| %>
-                                            <li class="list-inline-item"><a name="size-item" class="btn btn-success btn-size" onclick="active_size_item(this, '<%= @product.id %>')"><span><%= item.size %></a></span></li>
+                                        <% @product.inventories.where('quantity_of_inventory > 0').order(size: :ASC).distinct.pluck(:size).each do |item| %>
+                                            <li class="list-inline-item"><a name="size-item" class="btn btn-success btn-size" onclick="active_size_item(this, '<%= @product.id %>')"><span><%= item %></a></span></li>
                                         <% end %>                                      
                                     </ul>
                                 </div>
